--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "express": "^5.1.0",
+    "mongoose": "^8.16.5",
     "node": "^20.19.4",
     "nodemon": "^3.1.10",
-    "url": "^0.11.4",
-    "zod": "^4.0.14"
+    "url": "^0.11.4"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
