--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "mongoose": "^8.16.5",
+    "morgan": "^1.10.1",
     "node": "^20.19.4",
     "nodemon": "^3.1.10",
     "url": "^0.11.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/morgan": "^1.9.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
