--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "complete-todo-app",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "dev": "nodemon src/index.ts"
-  },
+"scripts": {
+  "dev": "nodemon src/index.ts",
+  "build": "tsc",
+  "start": "node dist/index.js"
+},
   "author": "",
   "license": "ISC",
   "description": "",
