--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "morgan": "^1.10.1",
     "node": "^20.19.4",
     "nodemon": "^3.1.10",
-    "url": "^0.11.4"
+    "url": "^0.11.4",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
